Some fixes/changes to bots